@@ -85,6 +85,7 @@ Bug fixes
  * StreamField block controls are no longer hidden by the StreamField menu when prepending a new block (Vincent Audebert)
  * Removed invalid use of ``__`` alias that prevented strings getting picked up for translation (Juha Yrjölä)
  * :ref:`Routable pages <routable_page_mixin>` without a main view no longer raise a ``TypeError`` (Bojan Mihelac)
+ * Fixed UnicodeEncodeError in wagtailforms when downloading a CSV for a form containing non-ASCII field labels on Python 2 (Mikalai Radchuk)
 
 
 Upgrade considerations
